Updated lastlogin macro with additional security
Previously, anybody who knew the name for the macro could call it and it
would reveal information typically kept private (e.g., email addresses).
The inclusion of the 'show-if' macro means that this now only shows to
confluence-administrators (or whoever you set it to).

--- a/Last Login/lastlogin.css
+++ b/Last Login/lastlogin.css
@@ -3,7 +3,7 @@
 ##
 ## Developed by: Remo Siegwart and Steve Goldberg (https://answers.atlassian.com/questions/33385/macro-that-produces-a-list-of-users-last-login-date)
 ## Date created: 07-Feb-2012
-## Date updated: 14-Feb-2012
+## Date updated: 26-Sep-2012
 ## Prints a table with all users in it with a column showing when they last logged in.
 
 ## @noparams
@@ -16,29 +16,42 @@
 #set($crowdService = $containerContext.getComponent('crowdService'))
 #set($users = $userAccessor.getUsers())
 #set($totalactiveusers = 0)
-
-<table class="confluenceTable">
-    <tr>
-        <th class="confluenceTh">User</th>
-        <th class="confluenceTh">Last Successful Login</th>
-        <th class="confluenceTh">Creation</th>
-        <th class="confluenceTh">Active</th>
-    </tr>
-    #foreach($user in $users)
-        #set($crowdUser = $crowdService.getUser($user.name))
-        <tr>
-            <td class="confluenceTd">#usernameLink($user.name)</td>
-            <td class="confluenceTd">$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $loginManager.getLoginInfo($user).lastSuccessfulLoginDate)</td>
-            <td class="confluenceTd">$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $crowdUser.createdDate)</td>
-            <td class="confluenceTd" style="text-align:center;">
-                #if($userAccessor.isDeactivated($user))
-                    <img src="/s/en_GB/3047/11/_/images/icons/emoticons/error.png" width="18" height="18" border="0">
-                #else
-                    <img src="/s/en_GB/3047/11/_/images/icons/emoticons/check.png" width="18" height="18" border="0">
-					#set($totalactiveusers = $totalactiveusers + 1)
-                #end
-            </td>
-        </tr>
-    #end
-</table>
-<p>Total active users: $totalactiveusers</p>
+<ac:macro ac:name="show-if">
+	<ac:parameter ac:name="match">all</ac:parameter>
+	<ac:parameter ac:name="group">confluence-administrators</ac:parameter>
+	<ac:rich-text-body>
+		<table class="confluenceTable">
+			<tr>
+				<th class="confluenceTh">User</th>
+				<th class="confluenceTh">Email</th>				
+				<th class="confluenceTh">Last Successful Login</th>
+				<th class="confluenceTh">Creation</th>
+				<th class="confluenceTh">Active</th>
+			</tr>
+			#foreach($user in $users)
+				#set($crowdUser = $crowdService.getUser($user.name))
+				<tr>
+					<td class="confluenceTd">#usernameLink($user.name)</td>
+					<td class="confluenceTd">#usernameLink($user.email)</td> 
+					<td class="confluenceTd">$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $loginManager.getLoginInfo($user).lastSuccessfulLoginDate)</td>
+					<td class="confluenceTd">$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $crowdUser.createdDate)</td>
+					<td class="confluenceTd" style="text-align:center;">
+						#if($userAccessor.isDeactivated($user))
+							<ac:macro ac:name="status">
+								<ac:parameter ac:name="colour">Red</ac:parameter>
+								<ac:parameter ac:name="title">NO</ac:parameter>
+							</ac:macro>
+						#else
+							<ac:macro ac:name="status">
+								<ac:parameter ac:name="colour">Green</ac:parameter>
+								<ac:parameter ac:name="title">YES</ac:parameter>
+							</ac:macro>
+							#set($totalactiveusers = $totalactiveusers + 1)
+						#end
+					</td>
+				</tr>
+			#end
+		</table>
+		<p>Total active users: $totalactiveusers</p>
+	</ac:rich-text-body>
+</ac:macro>
