--- a/Last Login/lastlogin.css
+++ b/Last Login/lastlogin.css
@@ -1,41 +1,52 @@
 ## Macro name: lastlogin
 ## Macro has a body: N
 ##
-## Developed by: Remo Siegwart and Steve Goldberg (https://answers.atlassian.com/questions/33385/macro-that-produces-a-list-of-users-last-login-date)
+## Developed by: Remo Siegwart, Steve Goldberg, and Bruce Schlueter 
+## Documentation: https://answers.atlassian.com/questions/33385/macro-that-produces-a-list-of-users-last-login-date and https://answers.atlassian.com/questions/89027/how-to-find-last-login-date-of-users-in-confluence
 ## Date created: 07-Feb-2012
-## Date updated: 26-Sep-2012
+## Date updated: 11-Feb-2013
 ## Prints a table with all users in it with a column showing when they last logged in.
 
 ## @noparams
-#set($containerManagerClass = $content.class.forName('com.atlassian.spring.container.ContainerManager'))
-#set($getInstanceMethod = $containerManagerClass.getDeclaredMethod('getInstance',null))
-#set($containerManager = $getInstanceMethod.invoke(null,null))
-#set($containerContext = $containerManager.containerContext)
+#set ($containerManagerClass = $content.class.forName('com.atlassian.spring.container.ContainerManager'))
+#set ($getInstanceMethod = $containerManagerClass.getDeclaredMethod('getInstance',null))
+#set ($containerManager = $getInstanceMethod.invoke(null,null))
+#set ($containerContext = $containerManager.containerContext)
 
-#set($loginManager = $containerContext.getComponent('loginManager'))
-#set($crowdService = $containerContext.getComponent('crowdService'))
-#set($users = $userAccessor.getUsers())
-#set($totalactiveusers = 0)
+#set ($loginManager = $containerContext.getComponent('loginManager'))
+#set ($crowdService = $containerContext.getComponent('crowdService'))
+#set ($users = $userAccessor.getUsers())
+#set ($totalactiveusers = 0)
+#set ($t1 = $content.currentDate.time)
+
 <ac:macro ac:name="show-if">
 	<ac:parameter ac:name="match">all</ac:parameter>
 	<ac:parameter ac:name="group">confluence-administrators</ac:parameter>
 	<ac:rich-text-body>
 		<table class="confluenceTable">
 			<tr>
-				<th class="confluenceTh">User</th>
-				<th class="confluenceTh">Email</th>				
-				<th class="confluenceTh">Last Successful Login</th>
-				<th class="confluenceTh">Creation</th>
-				<th class="confluenceTh">Active</th>
+				<th>User</th>
+				<th>Email</th>				
+				<th>Last Successful Login</th>
+				<th>Days</th>
+				<th>Creation</th>
+				<th>Active</th>
 			</tr>
-			#foreach($user in $users)
-				#set($crowdUser = $crowdService.getUser($user.name))
+			#foreach ($user in $users)
+				#set ($crowdUser = $crowdService.getUser($user.name))
+				#set ($t3 = "N/A")
+				#if ($loginManager.getLoginInfo($user).lastSuccessfulLoginDate)
+					#set ($t2 = $loginManager.getLoginInfo($user).lastSuccessfulLoginDate.time)
+					#set ($t3 = $t1 - $t2) 
+					#set ($t3 = $t3/1000/24/60/60)
+				#end
 				<tr>
-					<td class="confluenceTd">#usernameLink($user.name)</td>
-					<td class="confluenceTd">#usernameLink($user.email)</td> 
-					<td class="confluenceTd">$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $loginManager.getLoginInfo($user).lastSuccessfulLoginDate)</td>
-					<td class="confluenceTd">$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $crowdUser.createdDate)</td>
-					<td class="confluenceTd" style="text-align:center;">
+					<td>$user.name</td>
+					<td>$user.email</td> 
+					<td>$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $loginManager.getLoginInfo($user).lastSuccessfulLoginDate)</td>
+					<td>$t3</td>
+					<td>$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $crowdUser.createdDate)</td>
+					<td style="text-align:center;">
 						#if($userAccessor.isDeactivated($user))
 							<ac:macro ac:name="status">
 								<ac:parameter ac:name="colour">Red</ac:parameter>
