--- a/Last Login/lastlogin.css
+++ b/Last Login/lastlogin.css
@@ -7,7 +7,8 @@
 ## Date updated: 11-Feb-2013
 ## Prints a table with all users in it with a column showing when they last logged in.
 
-## @noparams
+## @param group:title=Group|type=string|desc=If you want to search for a particular group, else all users will be searched for.
+
 #set ($containerManagerClass = $content.class.forName('com.atlassian.spring.container.ContainerManager'))
 #set ($getInstanceMethod = $containerManagerClass.getDeclaredMethod('getInstance',null))
 #set ($containerManager = $getInstanceMethod.invoke(null,null))
@@ -15,24 +16,35 @@
 
 #set ($loginManager = $containerContext.getComponent('loginManager'))
 #set ($crowdService = $containerContext.getComponent('crowdService'))
-#set ($users = $userAccessor.getUsers())
+
 #set ($totalactiveusers = 0)
+#set ($totalusers = 0)
 #set ($t1 = $content.currentDate.time)
+
+#if ($paramgroup)
+	#set ($group = $userAccessor.getGroup($paramgroup))
+	#set ($users = $userAccessor.getMemberNames($group))
+#else
+	#set ($group = "all")
+	#set ($users = $userAccessor.getUsers())
+#end
 
 <ac:macro ac:name="show-if">
 	<ac:parameter ac:name="match">all</ac:parameter>
 	<ac:parameter ac:name="group">confluence-administrators</ac:parameter>
 	<ac:rich-text-body>
+		<p>Searching for <b>$group</b> users.</p>
 		<table class="confluenceTable">
 			<tr>
-				<th>User</th>
+				<th>Name</th>
+				<th>Username</th>
 				<th>Email</th>				
 				<th>Last Successful Login</th>
 				<th>Creation</th>
 				<th>Days</th>
 				<th>Active</th>
 			</tr>
-			#foreach ($user in $users)
+			#macro (magic)
 				#set ($crowdUser = $crowdService.getUser($user.name))
 				#if ($loginManager.getLoginInfo($user).lastSuccessfulLoginDate)
 					#set ($t2 = $loginManager.getLoginInfo($user).lastSuccessfulLoginDate.time)
@@ -42,28 +54,40 @@
 				#set ($t3 = $t1 - $t2) 
 				#set ($t3 = $t3/1000/24/60/60)
 				<tr>
+					<td>$user.fullName</td>
 					<td>$user.name</td>
 					<td>$user.email</td> 
 					<td>$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $loginManager.getLoginInfo($user).lastSuccessfulLoginDate)</td>
 					<td>$action.dateFormatter.formatGivenString('yyyy/MM/dd HH:mm', $crowdUser.createdDate)</td>
 					<td>$t3</td>
 					<td style="text-align:center;">
-						#if($userAccessor.isDeactivated($user))
-							<ac:macro ac:name="status">
-								<ac:parameter ac:name="colour">Red</ac:parameter>
-								<ac:parameter ac:name="title">NO</ac:parameter>
-							</ac:macro>
+						#if ($userAccessor.isDeactivated($user))
+							#set ($statuscolour = "Red")
+							#set ($statustitle = "NO")
 						#else
-							<ac:macro ac:name="status">
-								<ac:parameter ac:name="colour">Green</ac:parameter>
-								<ac:parameter ac:name="title">YES</ac:parameter>
-							</ac:macro>
-							#set($totalactiveusers = $totalactiveusers + 1)
+							#set ($statuscolour = "Green")
+							#set ($statustitle = "YES")
+							#set ($totalactiveusers = $totalactiveusers + 1)
 						#end
+						<ac:macro ac:name="status">
+							<ac:parameter ac:name="colour">$statuscolour</ac:parameter>
+							<ac:parameter ac:name="title">$statustitle</ac:parameter>
+						</ac:macro>
+						#set ($totalusers = $totalusers + 1)
 					</td>
 				</tr>
 			#end
+			#if ($paramgroup)
+				#foreach ($username in $users)
+					#set ($user = $userAccessor.getUser($username))
+					#magic()
+				#end
+			#else
+				#foreach ($user in $users)
+					#magic()
+				#end
+			#end
 		</table>
-		<p>Total active users: $totalactiveusers</p>
+		<p>Total active users: $totalactiveusers (of $totalusers who are registered).</p>
 	</ac:rich-text-body>
 </ac:macro>
